.metadata/.plugins/org.eclipse.cdt.ui/FunctionTracer.build.log
22:44:18 **** Incremental Build of configuration Debug for project FunctionTracer ****
make all 
Building file: ../src/FunctionTracer.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/FunctionTracer.d" -MT"src/FunctionTracer.o" -o "src/FunctionTracer.o" "../src/FunctionTracer.cpp"
In file included from ../src/FunctionTracer.cpp:9:0:
../src/FunctionTace.h: In constructor ‘FunctionTracer::FunctionTracer(std::__cxx11::string)’:
../src/FunctionTace.h:58:21: error: ‘FunctionTraceCounter’ was not declared in this scope
       int Counter = FunctionTraceCounter.get(ThreadId);
                     ^
../src/FunctionTace.h:61:22: error: ‘FunctionTrace_TraceLevel’ was not declared in this scope
       if (Counter <= FunctionTrace_TraceLevel){
                      ^
In file included from ../src/FunctionTracer.cpp:9:0:
../src/FunctionTace.h: In member function ‘void FunctionTracer::Destructor()’:
../src/FunctionTace.h:86:21: error: ‘FunctionTraceCounter’ was not declared in this scope
       int Counter = FunctionTraceCounter.get(ThreadId);
                     ^
../src/FunctionTace.h:87:22: error: ‘FunctionTrace_TraceLevel’ was not declared in this scope
       if (Counter <= FunctionTrace_TraceLevel){
                      ^
make: *** [src/FunctionTracer.o] Error 1
src/subdir.mk:21: recipe for target 'src/FunctionTracer.o' failed

22:44:19 Build Finished (took 1s.158ms)

